--- a/widgets/image/image.html
+++ b/widgets/image/image.html
@@ -1,1 +1,2 @@
-<img data-bind-src="image | prepend '/assets'" data-bind-width="width"/>
+<img data-bind-src="image" data-bind-width="width"/>
+<!-- <img data-bind-src="image | prepend '/assets'" data-bind-width="width"/> -->
